--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,100 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>TODO</title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/spacelab/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+    crossorigin="anonymous">
+  <title>Todo</title>
 </head>
 
 <body>
+
+  <nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">ToDo List</a>
+  </nav>
+
+  <div class="container mt-3">
+    <div class="form-group">
+      <input type="text" class="form-control add__field" placeholder="Enter task">
+    </div>
+
+    <fieldset>
+      <p>Choose Priority:</p>
+      <button type="button" class="btn btn-outline-danger priority__btn-high">High</button>
+      <button type="button" class="btn btn-outline-warning priority__btn-middle">Middle</button>
+      <button type="button" class="btn btn-outline-success priority__btn-low">Low</button>
+      <button type="button" class="btn btn-outline-secondary priority__btn-none">None</button>
+    </fieldset>
+    <div class="d-flex flex-row-reverse">
+      <button class="btn btn-primary my-2 my-sm-0 add__btn" type="submit">Add task</button>
+    </div>
+  </div>
+
+  <div class="container task__list">
+    <label class="control-label">Task List:</label>
+    <div class="form-group task__item">
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text task__item-edit">
+            <a href="#">
+              <i class="far fa-edit"></i>
+            </a>
+          </span>
+        </div>
+        <input type="text" class="form-control border-success" disabled>
+        <div class="input-group-append">
+          <span class="input-group-text task__item-delete">
+            <a href="#">
+              <i class="fas fa-trash-alt"></i>
+            </a>
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="form-group task__item">
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text task__item-edit">
+            <a href="#">
+              <i class="far fa-edit"></i>
+            </a>
+          </span>
+        </div>
+        <input type="text" class="form-control border-warning" disabled>
+        <div class="input-group-append">
+          <span class="input-group-text task__item-delete">
+            <a href="#">
+              <i class="fas fa-trash-alt"></i>
+            </a>
+          </span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <!-- <div class="form-group has-success">
+    <label class="form-control-label" for="inputSuccess1">Valid input</label>
+    <input type="text" value="correct value" class="form-control is-valid" id="inputValid">
+    <div class="valid-feedback">Success! You've done it.</div>
+  </div>
+
+  <div class="form-group has-danger">
+    <label class="form-control-label" for="inputDanger1">Invalid input</label>
+    <input type="text" value="wrong value" class="form-control is-invalid" id="inputInvalid">
+    <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
+  </div> -->
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
 
 </body>
 
