--- a/src/index.html
+++ b/src/index.html
@@ -26,19 +26,19 @@
       <p>Choose Priority:</p>
       <div class="form-group priority__group">
         <div class="custom-control custom-radio">
-          <input type="radio" id="priority__none" name="customRadio" class="custom-control-input" value="none" checked="">
+          <input type="radio" id="priority__none" name="customRadio" class="custom-control-input" value="secondary" checked="">
           <label class="custom-control-label" for="priority__none">None</label>
         </div>
         <div class="custom-control custom-radio">
-          <input type="radio" id="priority__low" name="customRadio" class="custom-control-input" value="low">
+          <input type="radio" id="priority__low" name="customRadio" class="custom-control-input" value="success">
           <label class="custom-control-label" for="priority__low">Low</label>
         </div>
         <div class="custom-control custom-radio">
-          <input type="radio" id="priority__middle" name="customRadio" class="custom-control-input" value="middle">
+          <input type="radio" id="priority__middle" name="customRadio" class="custom-control-input" value="warning">
           <label class="custom-control-label" for="priority__middle">Middle</label>
         </div>
         <div class="custom-control custom-radio">
-          <input type="radio" id="priority__high" name="customRadio" class="custom-control-input" value="high">
+          <input type="radio" id="priority__high" name="customRadio" class="custom-control-input" value="danger">
           <label class="custom-control-label" for="priority__high">High</label>
         </div>
       </div>
@@ -49,46 +49,47 @@
     </div>
   </form>
 
-  <div class="container task__list">
-    <label class="control-label">Task List:</label>
-    <div class="form-group task__item">
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <span class="input-group-text task__item-edit">
-            <a href="#">
-              <i class="far fa-edit"></i>
-            </a>
-          </span>
-        </div>
-        <input type="text" class="form-control border-success" disabled>
-        <div class="input-group-append">
-          <span class="input-group-text task__item-delete">
-            <a href="#">
-              <i class="fas fa-trash-alt"></i>
-            </a>
-          </span>
-        </div>
-      </div>
-    </div>
-    <div class="form-group task__item">
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <span class="input-group-text task__item-edit">
-            <a href="#">
-              <i class="far fa-edit"></i>
-            </a>
-          </span>
-        </div>
-        <input type="text" class="form-control border-warning" disabled>
-        <div class="input-group-append">
-          <span class="input-group-text task__item-delete">
-            <a href="#">
-              <i class="fas fa-trash-alt"></i>
-            </a>
-          </span>
+  <div class="container mt-3">
+    <div class="task__list">
+      <!-- <div class="form-group task__item">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text task__item-edit">
+              <a href="#">
+                <i class="far fa-edit"></i>
+              </a>
+            </span>
+          </div>
+          <input type="text" class="form-control border-success" disabled>
+          <div class="input-group-append">
+            <span class="input-group-text task__item-delete">
+              <a href="#">
+                <i class="fas fa-trash-alt"></i>
+              </a>
+            </span>
+          </div>
         </div>
       </div>
-    </div>
+      <div class="form-group task__item">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text task__item-edit">
+              <a href="#">
+                <i class="far fa-edit"></i>
+              </a>
+            </span>
+          </div>
+          <input type="text" class="form-control border-warning" disabled>
+          <div class="input-group-append">
+            <span class="input-group-text task__item-delete">
+              <a href="#">
+                <i class="fas fa-trash-alt"></i>
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
   </div>
 
