--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <form class="container mt-3 form__group">
     <div class="form-group">
       <input type="text" class="form-control task__field" placeholder="Enter task">
+      <div class="invalid-feedback">Sorry, that field is required.</div>
     </div>
 
     <fieldset>
@@ -53,18 +54,11 @@
     <div class="task__list">
       <!-- <div class="form-group task__item">
         <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text task__item-edit">
-              <a href="#">
-                <i class="far fa-edit"></i>
-              </a>
-            </span>
-          </div>
           <input type="text" class="form-control border-success" disabled>
           <div class="input-group-append">
-            <span class="input-group-text task__item-delete">
+            <span class="input-group-text">
               <a href="#">
-                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-trash-alt task__item-delete"></i>
               </a>
             </span>
           </div>
@@ -72,18 +66,11 @@
       </div>
       <div class="form-group task__item">
         <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text task__item-edit">
-              <a href="#">
-                <i class="far fa-edit"></i>
-              </a>
-            </span>
-          </div>
           <input type="text" class="form-control border-warning" disabled>
           <div class="input-group-append">
-            <span class="input-group-text task__item-delete">
+            <span class="input-group-text">
               <a href="#">
-                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-trash-alt task__item-delete"></i>
               </a>
             </span>
           </div>
@@ -92,22 +79,6 @@
     </div> -->
 
   </div>
-
-
-  <!-- <div class="form-group has-success">
-    <label class="form-control-label" for="inputSuccess1">Valid input</label>
-    <input type="text" value="correct value" class="form-control is-valid" id="inputValid">
-    <div class="valid-feedback">Success! You've done it.</div>
-  </div>
-
-  <div class="form-group has-danger">
-    <label class="form-control-label" for="inputDanger1">Invalid input</label>
-    <input type="text" value="wrong value" class="form-control is-invalid" id="inputInvalid">
-    <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
-  </div> -->
-
-
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
